# dev-ai-agent

./: .env.example  NEWS  README.md  pyproject.toml  sudoku_game.py
.github/workflows/: build-exe.yml
docs/superpowers/plans/: 2026-04-15-chatbot-web-ui.md  2026-04-15-rust-cli-chatbot.md
docs/superpowers/specs/: 2026-04-15-chatbot-web-ui-design.md  2026-04-15-rust-cli-chatbot-design.md
scripts/: prepare-release.sh
src/: main.py
src/agents/: __init__.py  april.py  base.py  june.py  march.py  may.py  models.py
src/chatbot/: Cargo.toml
src/chatbot/src/: commands.rs  main.rs
src/ssh_uploader/: app.py  requirements.txt  upload.html
src/sudoku/: sudoku.html
ssh_uploader/: app.py
tests/: conftest.py  test_app.py  test_april.py  test_base_agent.py  test_june.py  test_march.py  test_may.py
